# runslate

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  publish.sh
.github/workflows/: release.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: args.rs  errors.rs  lib.rs  main.rs
src/cache/: cmd.rs  mod.rs  util.rs
src/db/: mod.rs
src/db/ecdict/: mod.rs
src/db/ecdict/entities/: mod.rs  prelude.rs
src/translators/: dictionaryapi.rs  google.rs  mod.rs  youdao.rs
src/translators/ecdict/: mod.rs
src/translators/ecdict/entities/: words.rs
src/utils/: dyer.rs  env_loader.rs  file.rs  mod.rs
