[package]
name = "runslate"
version = "0.4.2"
edition = "2021"
authors = ["MoeexT yuwancumian666@outlook.com"]
description = "A shell dictionary created by Rust."
repository = "https://github.com/MoeexT/runslate.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.31"
clap = { version = "4.3.5", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
home = "0.5.5"
log = "0.4.19"
regex = "1.10.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.99"
sha256 = "1.4.0"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics"] }

